add_library (JS
    eval.h
    eval.cpp
    error.h
    error.cpp
    interpreter.h
    interpreter.cpp
    node.h
    node.cpp
    parser.h
    parser.cpp
    token.h
    token.cpp
    tokenizer.h
    tokenizer.cpp
    value.h
    value.cpp
    expressions/binary_expression.h
    expressions/binary_expression.cpp
    expressions/call_expression.h
    expressions/call_expression.cpp
    expressions/expression.h
    expressions/expression.cpp
    expressions/identifier.h
    expressions/identifier.cpp
    expressions/literal.h
    expressions/literal.cpp
    expressions/object_expression.h
    expressions/object_expression.cpp
    expressions/boolean.h
    expressions/boolean.cpp
    statements/block_statement.cpp
    statements/block_statement.h
    statements/expression_statement.cpp
    statements/expression_statement.h
    statements/function_declaration.cpp
    statements/function_declaration.h
    statements/if_statement.cpp
    statements/if_statement.h
    statements/object_statement.cpp
    statements/object_statement.h
    statements/program.cpp
    statements/program.h
    statements/return_statement.cpp
    statements/return_statement.h
    statements/statement.cpp
    statements/statement.h
    statements/variable_statement.cpp
    statements/variable_statement.h
)

target_include_directories (JS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})